examples/type_system/failing/94_wrong_argument_count_too_many.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/94_wrong_argument_count_too_many.flx
// error[E056]: Wrong Number Of Arguments
//
// The `add` function takes 2 arguments, but 3 were provided.
//
//   examples/type_system/failing/94_wrong_argument_count_too_many.flx:33:14
//    |
// 28 | fn add(a: Int, b: Int) -> Int {
//    | ----------------------------- `add` is defined with 2 parameters
// 29 |     a + b
// 30 | }
// 31 |
// 32 | fn main() -> Unit {
// 33 |     let _x = add(1, 2, 3)
//    |              ^^^^^^^^^^^^
//    |              ------------ 3 arguments provided here, expected 2
//
// Help:
//   Remove 1 extra argument(s), for example: `add(arg1, arg2)`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E056

// E056: statically-known call arity mismatch (too many arguments).
fn add(a: Int, b: Int) -> Int {
    a + b
}

fn main() -> Unit {
    let _x = add(1, 2, 3)
}
